# jittok

./: LICENSE  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: test.yml
jittok/: __init__.py  cli.py  core.py  exceptions.py
jittok/blob/: __init__.py  core.py
jittok/jpaddress/: __init__.py  core.py  exceptions.py
jittok/jpdatetime/: __init__.py  core.py
jittok/jptext/: __init__.py  cli.py  core.py  exceptions.py
tests/: test_cli.py  test_core.py  test_jptext.py  test_package.py
tests/blob/: test_core.py
tests/blob/fixtures/: zipcode_head.csv  zipcode_mid.csv  zipcode_tail.csv
tests/fixtures/jptext/codecs/: cp932.txt  johab.txt  utf_16.txt  utf_32_be.txt  utf_8.txt  utf_8_sig.txt
tests/fixtures/text/: utf8.txt  utf8tocp932.txt
tests/jpaddress/: test_core.py
tests/jpdatetime/: test_core.py
tests/jptext/: test_cli.py  test_jptext.py
tests/jptext/fixtures/jptext/codecs/: euc_jp.txt  gbk.txt  iso2022_jp.txt  utf_16_be.txt  utf_32.txt  utf_7.txt
