[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "jittok"
dynamic = ["version"]
description = "Swiss Army Knife-like toolbox for data processing"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
    { name = "osoken", email = "osoken.devel@outlook.jp" },
]
license = { file = "LICENSE" }

dependencies = [
    "regex",
    "pykakasi",
    "dataclasses; python_version < '3.7'",
]

[project.urls]
repository = "https://github.com/osoken/jittok"

[tool.setuptools]
packages = [
    "jittok",
    "jittok.jptext",
    "jittok.jpdatetime",
    "jittok.jpaddress",
]

[tool.setuptools.package-data]
jittok = ["py.typed"]

[project.optional-dependencies]
dev = [
    "flake8",
    "pytest",
    "black",
    "mypy",
    "tox",
    "isort",
    "types-regex",
    "pytest-mock",
    "types-dataclasses",
]

[tool.setuptools.dynamic]
version = {attr = "jittok.__version__"}

[tool.setuptools_scm]
write_to = "jittok/_version.py"
